# handlers/handler.go
@@ -8,6 +8,61 @@ import (
 type Controller struct {
 }
 
+func (c Controller) PostBroadcast(ctx echo.Context) error {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (c Controller) PostFollow(ctx echo.Context) error {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (c Controller) GetNodesIpAddresses(ctx echo.Context) error {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (c Controller) PostNodesIpAddresses(ctx echo.Context) error {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (c Controller) GetPing(ctx echo.Context, params api.GetPingParams) error {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (c Controller) GetTimelineUserId(ctx echo.Context, userId string) error {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (c Controller) PostTweets(ctx echo.Context) error {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (c Controller) GetTweetsUserId(ctx echo.Context, userId string) error {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (c Controller) PostUnfollow(ctx echo.Context) error {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (c Controller) PostUsers(ctx echo.Context) error {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (c Controller) GetUsersUserId(ctx echo.Context, userId string) error {
+	//TODO implement me
+	panic("implement me")
+}
+
 func (c Controller) GetNodeIPAddresses(ctx echo.Context) error {
 	return nil
 }
@@ -17,7 +72,7 @@ func (c Controller) SendNodeIPAddresses(ctx echo.Context) error {
 
 }
 
-func (c Controller) PingNode(ctx echo.Context, params api.PingNodeParams) error {
+func (c Controller) PingNode(ctx echo.Context, params api.GetPingParams) error {
 	return nil
 }
 
